k8s/app/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: todo-app
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
